@@ -3693,45 +3693,12 @@ try|try
 block|{
 if|if
 condition|(
+operator|!
 name|parts
 operator|.
 name|isEmpty
 argument_list|()
 condition|)
-block|{
-if|if
-condition|(
-operator|!
-name|partsList
-operator|.
-name|getDeniedPartns
-argument_list|()
-operator|.
-name|isEmpty
-argument_list|()
-condition|)
-block|{
-name|aliasPartnDesc
-operator|=
-name|Utilities
-operator|.
-name|getPartitionDesc
-argument_list|(
-name|partsList
-operator|.
-name|getDeniedPartns
-argument_list|()
-operator|.
-name|iterator
-argument_list|()
-operator|.
-name|next
-argument_list|()
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-else|else
 block|{
 name|aliasPartnDesc
 operator|=
